backend/cpp-compiler-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpp-compiler-service
  labels:
    app: cpp-compiler-service
spec:
  selector:
    app: cpp-compiler-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
