backend/cpp-compiler-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpp-compiler-ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /cpp-compiler
            pathType: Prefix
            backend:
              service:
                name: cpp-compiler-service
                port:
                  number: 8081
